Core files for Angular2.

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,11 @@
-<html>    
+<html>
+    <header>
+
+    </header>
     <body>
         <h1>Property Wizard</h1>
+        <div>
+                Loading...
+        </div>
     </body>
 </html>
