--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <base href="/">
         <link rel="stylesheet" href="public/style.css">
 
+        <!-- Polyfill(s) for older browsers -->
+        <script src="node_modules/core-js/client/shim.min.js"></script>
+
         <script src="node_modules/systemjs/dist/system.src.js"></script>
         <script src="public/systemjs.config.js"></script>
         <script>
