--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         </script>
     </header>
     <body>
-        <h1>Property Wizard</h1>
+        <h1 style="margin-left: 30%">Property Wizard</h1>
         <pw-app>
-                Loading...
+                Loading ...
         </pw-app>
     </body>
 </html>
