--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <body>
         <h1 style="margin-left: 30%">Property Wizard</h1>
         <pw-app>
-                Loading ...
+                thinking ...
         </pw-app>
     </body>
 </html>
