Set some style on top bar. Add constructor to Postcode entity.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         </script>
     </header>
     <body>
-        <h1 style="margin-left: 30%">Property Wizard</h1>
+        <div id="topBar"><h1>Property Wizard</h1></div>
+        <hr />
         <pw-app>
                 thinking ...
         </pw-app>
