--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <script src="node_modules/systemjs/dist/system.src.js"></script>
         <script src="public/systemjs.config.js"></script>
         <script>
-            System.import("app/build/main.js").catch( function(err){console.error(err); });
+            System.import("bundle.js").catch( function(err){console.error(err); });
         </script>
     </header>
     <body>
