--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
         <link rel="stylesheet" href="public/style.css">        
 
         <!-- Polyfill(s) for older browsers -->
-        <script src="node_modules/core-js/client/shim.min.js"></script>        
+        <script src="node_modules/core-js/client/shim.min.js"></script> 
+
         <script src="node_modules/zone.js/dist/zone.js"></script>
+        <script src="node_modules/systemjs/dist/system.src.js"></script>
+        <script src="public/systemjs.config.js"></script>
+        <!--<script>
+            System.import("app/build/main.js").catch( function(err){console.error(err); });
+        </script>-->
         <script src="bundle.min.js"></script>
     </header>
     <body>
