--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>Property Wizard</title>
         <base href="/">
         <link rel="stylesheet" href="public/style.css">        
+        <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
 
         <!-- Polyfill(s) for older browsers -->
         <script src="node_modules/core-js/client/shim.min.js"></script> 
@@ -14,6 +15,8 @@
             System.import("app/build/main.js").catch( function(err){console.error(err); });
         </script>-->
         <script src="bundle.min.js"></script>
+        <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+        
     </header>
     <body>
         <div id="topBar"><h1>Property Wizard</h1></div>
