--- a/index.html
+++ b/index.html
@@ -1,9 +1,23 @@
-<html>
-    <header>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
         <title>Property Wizard</title>
         <base href="/">
         <link rel="stylesheet" href="public/style.css">        
         <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="node_modules/tether/dist/css/tether.min.css">     
+    </head>
+    <body>
+        <!--<div id="topBar"><h1>Property Wizard</h1></div>-->
+        <nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-inverse">
+            <a class="navbar-brand" href="#">Property Wizard</a>
+            <div class"collapse navbar-collapse"></div>
+        </nav>
+        <div class="container">            
+            <pw-app>
+                    thinking ...
+            </pw-app>
+        </div>
 
         <!-- Polyfill(s) for older browsers -->
         <script src="node_modules/core-js/client/shim.min.js"></script> 
@@ -13,16 +27,10 @@
         <script src="public/systemjs.config.js"></script>
         <!--<script>
             System.import("app/build/main.js").catch( function(err){console.error(err); });
-        </script>-->
+        </script>-->   
         <script src="bundle.min.js"></script>
+        <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+        <script src="node_modules/tether/dist/js/tether.min.js"></script>
         <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-        
-    </header>
-    <body>
-        <div id="topBar"><h1>Property Wizard</h1></div>
-        <hr />
-        <pw-app>
-                thinking ...
-        </pw-app>
     </body>
 </html>
