Remove duplicated navigation menu.

--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
         <div class="container" data-find>
             <div class="header clearfix">                
                 <h3 class="text-muted float-left">Property Wizard</h3>
-                <pw-nav>
-                <pw-nav>
                 <nav>
                     <ul class="nav nav-pills float-right">
+                        <li class="nav-item" ><a href="/dashboard" class="nav-link">Home</a></li>
                         <li class="nav-item" ><a href="/postcodes" class="nav-link">Post codes</a></li>
                         <li class="nav-item" ><a href="/agencies" class="nav-link">Agencies</a></li>
                         <li class="nav-item" ><a href="/agencies/stats" class="nav-link">Agencies Stats</a></li>
