Add a specific component for nav element. (known issue agencies/stats url set active also "agencies" link).

--- a/index.html
+++ b/index.html
@@ -11,14 +11,7 @@
         <div class="container" data-find>
             <div class="header clearfix">                
                 <h3 class="text-muted float-left">Property Wizard</h3>
-                <nav>
-                    <ul class="nav nav-pills float-right">
-                        <li class="nav-item" ><a href="/dashboard" class="nav-link">Home</a></li>
-                        <li class="nav-item" ><a href="/postcodes" class="nav-link">Post codes</a></li>
-                        <li class="nav-item" ><a href="/agencies" class="nav-link">Agencies</a></li>
-                        <li class="nav-item" ><a href="/agencies/stats" class="nav-link">Agencies Stats</a></li>
-                    </ul>
-                </nav>   
+                <pw-app-nav></pw-app-nav>   
             </div>
 
             <div class="jumbotron" style="display:none">    
@@ -28,11 +21,9 @@
             </div>
 
             <div>
-                <pw-app>
+                <pw-app-container>
                     thinking ...
-                </pw-app>  
-                <router-outlet>
-                </router-outlet>
+                </pw-app-container>  
             </div>
 
             <footer class="footer">
