Restyling. Add loading text in Agencies statistics page.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
 
             <footer class="footer">
-                <p>© Alessandro Piccione 2017</p>
+                <p class="float-right">© Alessandro Piccione 2017</p>
             </footer>
         </div>
 
