Create Component for showing spinner ("loading...") during loading of resources.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
             <div>
                 <pw-app-container>
-                    thinking ...
+                    thinking <pw-loading></pw-loading>
                 </pw-app-container>  
             </div>
 
